--- a/style.css
+++ b/style.css
@@ -555,7 +555,6 @@ nav ul li a:hover::after, nav ul li a.active::after {
   background: var(--secondary-color);
 }
 
-/* Show view buttons only on small screens */
 @media (max-width: 768px) {
   .menu-tabs {
     display: none;
@@ -942,8 +941,6 @@ footer {
   }
 }
 
-/* ================ DARK MODE ================ */
-
 /* ================ RESPONSIVE STYLES ================ */
 @media (max-width: 992px) {
   .hero-content h1 {
@@ -1057,6 +1054,9 @@ footer {
 
   .gallery-grid {
     grid-template-columns: 1fr 1fr;
+  }
+  .about_h1{
+    margin-top: 50px;
   }
 }
 
